// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArchitectureDiagramGenerator > file depth produces a stable Mermaid graph TD 1`] = `
{
  "mermaid": "graph TD
    repo_repo_acme_widget[["acme/widget"]]:::root
    subgraph svc_service_convex_grp["convex/"]
        direction TB
        file_file_convex_schema_ts["schema.ts"]:::file
    end
    repo_repo_acme_widget --> svc_service_convex_grp
    subgraph svc_service_src_grp["src/"]
        direction TB
        file_file_src_main_tsx(("main.tsx")):::entrypoint
        file_file_src_App_tsx["App.tsx"]:::file
    end
    repo_repo_acme_widget --> svc_service_src_grp
    subgraph repo_repo_acme_widget_root["root"]
        direction TB
        file_file_package_json[/"package.json"/]:::config
        file_file_tsconfig_json[/"tsconfig.json"/]:::config
        file_file_vite_config_ts[/"vite.config.ts"/]:::config
        file_file_README_md["README.md"]:::file
    end
    repo_repo_acme_widget --> repo_repo_acme_widget_root
    ext_ext_convex["convex"]:::external
    repo_repo_acme_widget -.-> ext_ext_convex
    ext_ext_react["react"]:::external
    repo_repo_acme_widget -.-> ext_ext_react
    ext_ext_react_dom["react-dom"]:::external
    repo_repo_acme_widget -.-> ext_ext_react_dom
    ext_ext_tailwind_merge["tailwind-merge"]:::external
    repo_repo_acme_widget -.-> ext_ext_tailwind_merge
    ext_ext_zod["zod"]:::external
    repo_repo_acme_widget -.-> ext_ext_zod
    classDef root fill:#dbeafe,stroke:#1d4ed8,color:#1e3a8a;
    classDef module fill:#eef2ff,stroke:#4338ca,color:#3730a3;
    classDef submodule fill:#f5f3ff,stroke:#6d28d9,color:#5b21b6;
    classDef entrypoint fill:#ecfdf5,stroke:#047857,color:#065f46;
    classDef config fill:#fefce8,stroke:#a16207,color:#713f12;
    classDef file fill:#ffffff,stroke:#9ca3af,color:#1f2937;
    classDef external fill:#f3f4f6,stroke:#6b7280,color:#374151,stroke-dasharray: 5 5;",
  "summary": "acme/widget: 7 key files across 3 services at file-level depth.",
  "title": "Architecture diagram (file): acme/widget",
}
`;

exports[`ArchitectureDiagramGenerator > module depth produces a stable Mermaid graph TD 1`] = `
{
  "mermaid": "graph TD
    repo_repo_acme_widget[["acme/widget"]]:::root
    subgraph svc_service_convex_grp["convex/"]
        direction TB
        mod_module_convex_lib["lib/"]:::submodule
    end
    repo_repo_acme_widget --> svc_service_convex_grp
    svc_service_public["public/"]:::module
    repo_repo_acme_widget --> svc_service_public
    subgraph svc_service_src_grp["src/"]
        direction TB
        mod_module_src_components["components/"]:::submodule
        mod_module_src_lib["lib/"]:::submodule
        mod_module_src_pages["pages/"]:::submodule
    end
    repo_repo_acme_widget --> svc_service_src_grp
    ep_entrypoint_src_main_tsx(("src/main.tsx")):::entrypoint
    svc_service_src_grp --> ep_entrypoint_src_main_tsx
    ext_ext_convex["convex"]:::external
    repo_repo_acme_widget -.-> ext_ext_convex
    ext_ext_react["react"]:::external
    repo_repo_acme_widget -.-> ext_ext_react
    ext_ext_react_dom["react-dom"]:::external
    repo_repo_acme_widget -.-> ext_ext_react_dom
    ext_ext_tailwind_merge["tailwind-merge"]:::external
    repo_repo_acme_widget -.-> ext_ext_tailwind_merge
    ext_ext_zod["zod"]:::external
    repo_repo_acme_widget -.-> ext_ext_zod
    classDef root fill:#dbeafe,stroke:#1d4ed8,color:#1e3a8a;
    classDef module fill:#eef2ff,stroke:#4338ca,color:#3730a3;
    classDef submodule fill:#f5f3ff,stroke:#6d28d9,color:#5b21b6;
    classDef entrypoint fill:#ecfdf5,stroke:#047857,color:#065f46;
    classDef config fill:#fefce8,stroke:#a16207,color:#713f12;
    classDef file fill:#ffffff,stroke:#9ca3af,color:#1f2937;
    classDef external fill:#f3f4f6,stroke:#6b7280,color:#374151,stroke-dasharray: 5 5;",
  "summary": "acme/widget: 3 services containing 4 modules at module-level depth.",
  "title": "Architecture diagram (module): acme/widget",
}
`;

exports[`ArchitectureDiagramGenerator > service depth produces a stable Mermaid graph TD 1`] = `
{
  "mermaid": "graph TD
    repo_repo_acme_widget[["acme/widget"]]:::root
    svc_service_convex["convex/"]:::module
    repo_repo_acme_widget --> svc_service_convex
    svc_service_public["public/"]:::module
    repo_repo_acme_widget --> svc_service_public
    svc_service_src["src/"]:::module
    repo_repo_acme_widget --> svc_service_src
    ep_entrypoint_src_main_tsx(("src/main.tsx")):::entrypoint
    svc_service_src --> ep_entrypoint_src_main_tsx
    ext_ext_convex["convex"]:::external
    repo_repo_acme_widget -.-> ext_ext_convex
    ext_ext_react["react"]:::external
    repo_repo_acme_widget -.-> ext_ext_react
    ext_ext_react_dom["react-dom"]:::external
    repo_repo_acme_widget -.-> ext_ext_react_dom
    ext_ext_tailwind_merge["tailwind-merge"]:::external
    repo_repo_acme_widget -.-> ext_ext_tailwind_merge
    ext_ext_zod["zod"]:::external
    repo_repo_acme_widget -.-> ext_ext_zod
    classDef root fill:#dbeafe,stroke:#1d4ed8,color:#1e3a8a;
    classDef module fill:#eef2ff,stroke:#4338ca,color:#3730a3;
    classDef submodule fill:#f5f3ff,stroke:#6d28d9,color:#5b21b6;
    classDef entrypoint fill:#ecfdf5,stroke:#047857,color:#065f46;
    classDef config fill:#fefce8,stroke:#a16207,color:#713f12;
    classDef file fill:#ffffff,stroke:#9ca3af,color:#1f2937;
    classDef external fill:#f3f4f6,stroke:#6b7280,color:#374151,stroke-dasharray: 5 5;",
  "summary": "acme/widget: 3 services and 5 external dependencies at service-level depth.",
  "title": "Architecture diagram (service): acme/widget",
}
`;
